--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Goblin Game</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Goblin Game</title>
 </head>
 <body>
-  <script src="index.js"></script>
+    <div class="game-board">
+        <img src="img/goblin.png" alt="Гоблин" class="goblin">
+    </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
